syntax = "proto3";
package helloworld;

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloReply);
    rpc End(EndMessage) returns (EndMessage);
}

message HelloRequest { string name = 1; }

message HelloReply { string message = 1; }

message EndMessage { }
